# chess

./: .gitignore  CLAUDE.md  Makefile  README.md  analysis-queue-plan.md  common-mistakes-plan.md  stored-game-puzzle-plan.md
backend/: .dockerignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
backend/api/: chess.py  puzzles.py  sample_chess.com_response.json  user.py
backend/api/helpers/: __init__.py  verify_chess_username.py
backend/core/: auth.py  config.py
backend/db/: __init__.py  dependencies.py  models.py  repositories.py  repository.py  sessions.py
backend/migrations/: env.py
backend/migrations/versions/: 1986a8b891d0_add_analysed_bool.py  4fd3b91e8a12_add_user_puzzles_table.py  953b69446e23_add_users_table.py  a1b2c3d4e5f6_add_chess_com_username.py  b2c3d4e5f6a7_add_created_at_column.py  c4d5e6f7a8b9_add_user_games_table.py  cc75d8b2e7ba_add_trend_analysis_table.py
backend/schema/: __init__.py  chess_request.py  chess_response.py  puzzle_response.py  user_request.py  user_response.py
backend/services/: __init__.py  chess_com.py  puzzle_candidates.py
backend/services/puzzle_classifier/: __init__.py  cook.py  model.py  service.py  util.py
frontend/: README.md  RESTRUCTURE_PLAN.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Header.jsx  LogoOptions.css  LogoOptions.jsx
frontend/src/contexts/: AnalysisQueueContext.jsx  (+2 more)
plans/: trend-analysis.md
scripts/: bandhan_smallcap_tracker.py  check.ipynb  fund_holdings.csv  hdfc_midcap_tracker.py  response_data.json
(+80 files in other folders)
